--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 
 <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+    <style>
+        #canvas {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
-  
+
 <body>
-    <canvas id="canvas" height="500" width="500"></canvas>
+    <canvas id="canvas"></canvas>
     <script type="module">
         import init, {
             add
