failing to add a button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <button id="add-button">+</button>
     <canvas id="canvas"></canvas>
     <script type="module">
         import init, {
