still flailing with buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <button id="add-button">+</button>
+    <button id="addButton">+</button>
     <canvas id="canvas"></canvas>
     <script type="module">
         import init, {
