Alden is a wizard (see zindex)

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
             position: absolute;
             left: 0;
             top: 0;
-        }
+            z-index: -1;
     </style>
 </head>
 
 <body>
-    <button id="addButton">+</button>
+    <button id="add-button">+</button>
     <canvas id="canvas"></canvas>
     <script type="module">
         import init, {
