--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
             top: 0;
             z-index: -1;
         }
+
+        button {
+            opacity: 0.7;
+        }
     </style>
 </head>
 
