--- a/index.html
+++ b/index.html
@@ -2,18 +2,7 @@
 
 <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-    <style>
-        #canvas {
-            position: absolute;
-            left: 0;
-            top: 0;
-            z-index: -1;
-        }
-
-        button {
-            opacity: 0.7;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
