--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
     <canvas id="canvas"></canvas>
     <div id="slider"></div>
     <script type="module">
-     var slider = document.getElementById('slider');
+     /* var slider = document.getElementById('slider');
 
-     noUiSlider.create(slider, {
-         start: [20, 80],
-         connect: true,
-         range: {
-             'min': 0,
-             'max': 100
-         }
-     });
-        import init, {
-            add
-        } from './art.js';
+      * noUiSlider.create(slider, {
+      *     start: [20, 80],
+      *     connect: true,
+      *     range: {
+      *         'min': 0,
+      *         'max': 100
+      *     }
+      * }); */
+        import init
+         from './art.js';
 
         async function run() {
             await init();
