beautiful unintiuitive backwardsness

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <canvas id="canvas"></canvas>
-    <div id="slider"></div>
+    <!-- <div id="slider"></div> -->
     <script type="module">
      /* var slider = document.getElementById('slider');
 
@@ -21,7 +21,7 @@
       *         'max': 100
       *     }
       * }); */
-        import init
+     import init
          from './art.js';
 
         async function run() {
