add but checkbox

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <canvas id="canvas"></canvas>
     <!-- <div id="slider"></div> -->
+    <div class="control">
+        <input type="checkbox" id="bug-checkbox">
+        <label for="bug-checkbox">🐛</label>
+    </div>
+
     <script type="module">
      /* var slider = document.getElementById('slider');
 
