--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <canvas id="canvas"></canvas>
+    <canvas id="overlay-canvas"></canvas>
     <!-- <div id="slider"></div> -->
     <div class="control">
         <input type="checkbox" id="bug-checkbox">
